files/etc/iptables.up.rules
#
# iptables firewall
#
*filter

# loopback is free
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# block the baddies
# -I INPUT -s xxx.xxx.xxx.xxx -j DROP

# Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allows all outbound traffic
-A OUTPUT -j ACCEPT

# Allows HTTP and HTTPS connections from anywhere (the normal ports for websites)
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT


# Allows SSH and mosh connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
-A INPUT -p udp --dport 60000:60020 -j ACCEPT

# Allows MySQL
#-A INPUT -p tcp -m state --state NEW --dport 3306 -s xxx.xxx.xxx.xxx -j ACCEPT

# Allow nagios
#-A INPUT -p tcp -m state --state NEW --dport 5666 -s xxx.xxx.xxx.xxx -j ACCEPT

# Allow ping
-A OUTPUT -p icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp --icmp-type 0 -j ACCEPT
-A FORWARD -p icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# allow ICMP time exceeded (traceroute)
-A INPUT -p icmp --icmp-type 11 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 11 -j ACCEPT
-A FORWARD -p icmp --icmp-type 11 -j ACCEPT

# allow ICMP destination unreachable
-A INPUT -p icmp --icmp-type 3/4 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/3 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/3 -j ACCEPT
-A INPUT -p icmp --icmp-type 3/3 -j ACCEPT
-A FORWARD -p icmp --icmp-type 3/1 -j ACCEPT
-A INPUT -p icmp --icmp-type 3/1 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 3/1 -j ACCEPT

# allow ICMP source quench
-A INPUT -p icmp --icmp-type 4 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 4 -j ACCEPT
-A FORWARD -p icmp --icmp-type 4 -j ACCEPT

# allow ICMP parameter problem
-A INPUT -p icmp --icmp-type 12 -j ACCEPT
-A OUTPUT -p icmp --icmp-type 12 -j ACCEPT
-A FORWARD -p icmp --icmp-type 12 -j ACCEPT

# allow SNMP from specific hosts
#-I INPUT -p udp --dport 161 -s xxx.xxx.xxx.xxx -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
